--- a/Capitulo1/introduccion.tex
+++ b/Capitulo1/introduccion.tex
@@ -56,6 +56,7 @@ que se requieren.\\
 
 El uso de aceleradores de partículas para aplicaciones medicas ha tenido gran auge en los últimos años, ya que las ventajas que tienen sobre las fuentes radioactivas son bastas, este echo da la oportunidad a las universidades de preparar expertos en estos temas y diseñar maquinaria a medida, que cumpla las exigencias de la región. Aunque ya existen trabajos referentes a fuentes de alto voltaje, generación de electrones mediante telurio y detectores de estos mismos, la curva de aprendizaje necesaria para especializarse en estos temas es grande y dejar un precedente en nuestro país es necesaria y muy útil, es por ello que estas
 investigaciones son de gran importancia.
+\newpage
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                           Hipotesis y objetivos                       %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -85,6 +86,8 @@ Este trabajo tiene por objetivo desarrollar una fuente de alto voltaje de hasta 
 
 \subsection{Hipótesis}
 El diseño adecuando de un sistema de generación de alto voltaje nos permite llevar acabo experimentos y de alta precisión, con el cual se podrá desarrollar tecnología aplicada en esta área.
+
+\newpage
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                           Estructura de la tesis                      %
