--- a/tesis.tex
+++ b/tesis.tex
@@ -4,6 +4,7 @@
 \usepackage{blindtext}                        % Para insertar texto dummy, de ejemplo, pues.
 \usepackage{setspace}
 \usepackage[round, sort, numbers]{natbib}  % Personalizar la bibliografía a gusto de cada quien
+\usepackage{booktabs}
 % Note:
 % The \blindtext or \Blindtext commands throughout this template generate dummy text
 % to fill the template out. These commands should all be removed when 
@@ -89,7 +90,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % the main text starts here with the introduction, 1st chapter,...
 \mainmatter
-\def\baselinestretch{2}                   % Interlineado de 1.5
+\def\baselinestretch{1.5}                   % Interlineado de 1.5
 \doublespacing
 \include{Capitulo1/introduccion}            % ~10 páginas - Explicar el propósito de la tesis
 \include{Capitulo2/marco_teorico}           % ~20 páginas - Poner un contexto a la tesis, hacer referencia a trabajos actuales en el tema
@@ -100,7 +101,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                   APÉNDICES                       %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\appendix
+%\appendix
 %\include{Apendice1/Apendice1}               % Colocar los circuitos, manuales, código fuente, pruebas de teoremas, etc.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -136,6 +137,12 @@ Doctor Ingeniero Industrial \url{http://personales.unican.es/rodrigma/PDFs/Trafo
 \bibitem{settime}Función de velocidad para comunicación serial. \url{https://www.arduino.cc/en/Reference/StreamSetTimeout}
 
 \bibitem{acelerado}ACELERADORES DE PARTICULAS. Dr. EDUARDO ANDRADE \url{http://www.nucleares.unam.mx/\~bijker/emfn/Andrade.pdf}
+
+\bibitem{ignicion}``ANÁLISIS DE INSTALACIÓN Y OPERACIÓN DE UN
+SISTEMA DE ENCENDIDO SIN DISTRIBUIDOR (DIS)'' \url{https://repositorio.espe.edu.ec/bitstream/21000/3995/1/T-ESPEL-0212.pdf}
+
+
+
 \end{thebibliography}
 
 
